--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "Kanit";
+  src: url("../fonts/Kanit-Bold.ttf") format("truetype");
+  font-weight: 700;
+}
+
 body,
 html {
   margin: 0;
